--- a/configure.ac
+++ b/configure.ac
@@ -19,18 +19,18 @@ AC_CANONICAL_HOST
 # this temp_os is a brutal hack until i look into the proper way to do this. ie- rtfm
 temp_os=`echo $host_os | cut -c-7`
 if test "$temp_os" = solaris; then
-	AC_DEFINE(UNIX_COMPAT)
+	AC_DEFINE([UNIX_COMPAT], [1], [Define to 1 to enable UNIX compatibility])
 fi
 temp_os=`echo $host_os | cut -c-4`
 if test "$temp_os" = irix;  then
-	AC_DEFINE(IRIX_COMPAT)
+	AC_DEFINE([IRIX_COMPAT], [1], [Define to 1 to enable Irix compatibility])
 fi
 temp_os=`echo $host_os | cut -c-3`
 if test "$temp_os" = aix; then
-	AC_DEFINE(UNIX_COMPAT)
+	AC_DEFINE([UNIX_COMPAT], [1], [Define to 1 to enable UNIX compatibility])
 fi
 
-AC_DEFINE(HOST_OS,$host_os)
+AC_DEFINE_UNQUOTED([HOST_OS],[$host_os], [Host OS])
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -58,11 +58,11 @@ AC_ARG_ENABLE([restrictive-names],
       AC_HELP_STRING([--disable-restrictive-names], [disable restrictive filename checks]),
       [
               if test "x$enableval" != "xno"; then
-                      AC_DEFINE([RESTRICTIVE_FILENAMES])
+                      AC_DEFINE([RESTRICTIVE_FILENAMES], [1], [Define to 1 to enable restrictive filename checks])
               fi
       ],[
 dnl           Default clause. This one defaults to on.
-              AC_DEFINE([RESTRICTIVE_FILENAMES])
+              AC_DEFINE([RESTRICTIVE_FILENAMES], [1], [Define to 1 to enable restrictive filename checks])
       ])
 
 AC_ARG_ENABLE([wildcards],
@@ -70,21 +70,21 @@ AC_ARG_ENABLE([wildcards],
       [
 dnl           Did they say anything, including an explicit --enable-wildcards?
               if test "x$enableval" != "xno"; then
-                      AC_DEFINE([ENABLE_WILDCARDS])
+                      AC_DEFINE([ENABLE_WILDCARDS], [1], [Define to 1 to enable wildcard processing])
               fi
       ],[
 dnl           Default clause. This one defaults to on.
-              AC_DEFINE([ENABLE_WILDCARDS])
+              AC_DEFINE([ENABLE_WILDCARDS], [1], [Define to 1 to enable wildcard processing])
       ])
 
 AC_ARG_ENABLE([gftp-compat],
       AC_HELP_STRING([--disable-gftp-compat], [disable gftp compatibility]),
       [
               if test "x$enableval" != "xno"; then
-                      AC_DEFINE([GFTP_COMPAT])
+                      AC_DEFINE([GFTP_COMPAT], [1], [Define to 1 to enable gftp compatibility])
               fi
       ],[
-              AC_DEFINE([GFTP_COMPAT])
+              AC_DEFINE([GFTP_COMPAT], [1], [Define to 1 to enable gftp compatibility])
       ])
 
 AC_ARG_WITH([sftp-server],
@@ -96,11 +96,11 @@ dnl                   way of requesting that sftp compatability *not*
 dnl                   be present.
                       scponly_explicit_sftpserver_path=$withval
                       dnl  TODO: should test viability...
-                      AC_DEFINE([ENABLE_SFTP])
+                      AC_DEFINE([ENABLE_SFTP], [1], [Define to 1 to enable sftp support])
                       scponly_sftp_compat=1
               fi
       ],[
-              AC_DEFINE([ENABLE_SFTP])
+              AC_DEFINE([ENABLE_SFTP], [1], [Define to 1 to enable sftp support])
               scponly_sftp_compat=1
       ])
 
@@ -109,8 +109,8 @@ AC_ARG_ENABLE([winscp-compat],
       [
               if test "x$enableval" != "xno"; then
                       scponly_scp_compat=1
-                      AC_DEFINE([ENABLE_SCP2])
-                      AC_DEFINE([WINSCP_COMPAT])
+                      AC_DEFINE([ENABLE_SCP2], [1], [Define to 1 to enable scp compatibility])
+                      AC_DEFINE([WINSCP_COMPAT], [1], [Define to 1 to enable winscp compatibility])
               fi
       ],[
               echo -n      dnl  Defaults to off, must be turned on explicitly
@@ -119,8 +119,8 @@ AC_ARG_ENABLE([winscp-compat],
 AC_ARG_WITH([default-chdir],
 	AC_HELP_STRING([--with-default-chdir=DIR], [cd to this directory after authentication (only for interactive logins)]),
 		[
-			AC_DEFINE([ENABLE_DEFAULT_CHDIR])
-			AC_DEFINE_UNQUOTED([DEFAULT_CHDIR], ["$withval"]) 
+			AC_DEFINE([ENABLE_DEFAULT_CHDIR], [1], [Define to 1 to cd to default chdir directory])
+			AC_DEFINE_UNQUOTED([DEFAULT_CHDIR], ["$withval"], [The default directory to chdir to]) 
 		],[
 			echo -n      dnl  Defaults to off, must be turned on explicitly
 		])
@@ -129,7 +129,7 @@ AC_ARG_ENABLE([unison-compat],
       AC_HELP_STRING([--enable-unison-compat], [enable unison compatibility]),
       [
               if test "x$enableval" != "xno"; then
-                      AC_DEFINE([UNISON_COMPAT])
+                      AC_DEFINE([UNISON_COMPAT], [1], [Define to 1 to enable unison compatibility])
               fi
       ],[
               echo -n      dnl  Defaults to off, must be turned on explicitly
@@ -150,7 +150,7 @@ AC_ARG_ENABLE([rsync-compat],
       AC_HELP_STRING([--enable-rsync-compat], [enable rsync compatibility]),
       [
               if test "x$enableval" != "xno"; then
-                      AC_DEFINE([RSYNC_COMPAT])
+                      AC_DEFINE([RSYNC_COMPAT], [1], [Define to 1 to enable rsync compatibility])
               fi
       ],[
               echo -n      dnl  Defaults to off, must be turned on explicitly
@@ -161,7 +161,7 @@ AC_ARG_ENABLE([chrooted-binary],
       [
               if test "x$enableval" != "xno"; then
                       AC_SUBST([CHROOTED_NAME], [scponlyc])
-                      AC_DEFINE([CHROOTED_NAME], ["scponlyc"])
+                      AC_DEFINE([CHROOTED_NAME], [1], [Define to 1 if you want "scponlyc"])
               fi
       ],[
               echo -n
@@ -171,7 +171,7 @@ AC_ARG_ENABLE([chroot-checkdir],
       AC_HELP_STRING([--disable-chroot-checkdir], [disable checking chroot dir ownership]),
       [
               if test "x$enableval" != "xno"; then
-                      AC_DEFINE([CHROOT_CHECKDIR])
+                      AC_DEFINE([CHROOT_CHECKDIR], [1], [Define to 1 to enable checking of chroot dir ownership])
               fi
       ],[
 dnl           Default clause. This one defaults to on.
@@ -182,7 +182,7 @@ AC_ARG_ENABLE([svn-compat],
       AC_HELP_STRING([--enable-svn-compat], [enable subversion SCS cli compatibility]),
       [
               if test "x$enableval" != "xno"; then
-                      AC_DEFINE([SVN_COMPAT])
+                      AC_DEFINE([SVN_COMPAT], [1], [Define to 1 to enable subversion SCS cli compatibility])
               fi
       ],[
               echo -n      dnl  Defaults to off, must be turned on explicitly
@@ -192,7 +192,7 @@ AC_ARG_ENABLE([svnserv-compat],
       AC_HELP_STRING([--enable-svnserv-compat], [enable subversion SCS svnserve compatibility]),
       [
               if test "x$enableval" != "xno"; then
-                      AC_DEFINE([SVNSERV_COMPAT])
+                      AC_DEFINE([SVNSERV_COMPAT], [1], [Define to 1 to enable subversion SCS svnserve compatibility])
               fi
       ],[
               echo -n      dnl  Defaults to off, must be turned on explicitly
@@ -202,7 +202,7 @@ AC_ARG_ENABLE([passwd-compat],
       AC_HELP_STRING([--enable-passwd-compat], [enable passwd compatibility]),
       [
               if test "x$enableval" != "xno"; then
-                      AC_DEFINE([PASSWD_COMPAT])
+                      AC_DEFINE([PASSWD_COMPAT], [1], [Define to 1 to enable passwd compatibility])
               fi
       ],[
               echo -n      dnl  Defaults to off, must be turned on explicitly
@@ -212,7 +212,7 @@ AC_ARG_ENABLE([quota-compat],
       AC_HELP_STRING([--enable-quota-compat], [enable quota compatibility]),
       [
               if test "x$enableval" != "xno"; then
-                      AC_DEFINE([QUOTA_COMPAT])
+                      AC_DEFINE([QUOTA_COMPAT], [1], [Define to 1 to enable quota compatibility])
               fi
       ],[
               echo -n      dnl  Defaults to off, must be turned on explicitly
