Move source code to src/ directory

--- a/Makefile.am
+++ b/Makefile.am
@@ -6,11 +6,12 @@ confdir = $(sysconfdir)/scponly
 bin_PROGRAMS = scponly
 
 scponly_SOURCES = \
-	config.h \
-	helper.c \
-	netbsd_getopt_long.c \
-	scponly_getopt.h \
-	scponly.c scponly.h
+	src/config.h \
+	src/helper.c \
+	src/netbsd_getopt_long.c \
+	src/scponly_getopt.h \
+	src/scponly.c \
+	src/scponly.h
 
 scponly_CPPFLAGS = \
 	$(AM_CPPFLAGS) \
