--- a/configure.ac
+++ b/configure.ac
@@ -41,251 +41,227 @@ dnl Call options "--disable-foo" if they default to on,
 dnl call them "--enable-foo" otherwise.
 
 AC_ARG_ENABLE([restrictive-names],
-      AC_HELP_STRING([--disable-restrictive-names], [disable restrictive filename checks]),
-      [
-              if test "x$enableval" != "xno"; then
-                      AC_DEFINE([RESTRICTIVE_FILENAMES], [1], [Define to 1 to enable restrictive filename checks])
-              fi
-      ],[
-dnl           Default clause. This one defaults to on.
-              AC_DEFINE([RESTRICTIVE_FILENAMES], [1], [Define to 1 to enable restrictive filename checks])
-      ])
+    AC_HELP_STRING([--disable-restrictive-names], [disable restrictive filename checks]),
+    [
+        if test "x$enableval" != "xno"; then
+            AC_DEFINE([RESTRICTIVE_FILENAMES], [1], [Define to 1 to enable restrictive filename checks])
+        fi
+    ],[
+        # Default clause. This one defaults to on.
+        AC_DEFINE([RESTRICTIVE_FILENAMES], [1], [Define to 1 to enable restrictive filename checks])
+    ])
 
 AC_ARG_ENABLE([wildcards],
-      AC_HELP_STRING([--disable-wildcards], [disable wildcard processing]),
-      [
-dnl           Did they say anything, including an explicit --enable-wildcards?
-              if test "x$enableval" != "xno"; then
-                      AC_DEFINE([ENABLE_WILDCARDS], [1], [Define to 1 to enable wildcard processing])
-              fi
-      ],[
-dnl           Default clause. This one defaults to on.
-              AC_DEFINE([ENABLE_WILDCARDS], [1], [Define to 1 to enable wildcard processing])
-      ])
+    AC_HELP_STRING([--disable-wildcards], [disable wildcard processing]),
+    [
+        # Did they say anything, including an explicit --enable-wildcards?
+        if test "x$enableval" != "xno"; then
+            AC_DEFINE([ENABLE_WILDCARDS], [1], [Define to 1 to enable wildcard processing])
+        fi
+    ],[
+        # Default clause. This one defaults to on.
+        AC_DEFINE([ENABLE_WILDCARDS], [1], [Define to 1 to enable wildcard processing])
+    ])
 
 AC_ARG_ENABLE([gftp-compat],
-      AC_HELP_STRING([--disable-gftp-compat], [disable gftp compatibility]),
-      [
-              if test "x$enableval" != "xno"; then
-                      AC_DEFINE([GFTP_COMPAT], [1], [Define to 1 to enable gftp compatibility])
-              fi
-      ],[
-              AC_DEFINE([GFTP_COMPAT], [1], [Define to 1 to enable gftp compatibility])
-      ])
+    AC_HELP_STRING([--disable-gftp-compat], [disable gftp compatibility]),
+    [
+        if test "x$enableval" != "xno"; then
+            AC_DEFINE([GFTP_COMPAT], [1], [Define to 1 to enable gftp compatibility])
+        fi
+    ],[
+        AC_DEFINE([GFTP_COMPAT], [1], [Define to 1 to enable gftp compatibility])
+    ])
 
 AC_ARG_WITH([sftp-server],
-      AC_HELP_STRING([--with-sftp-server], [path to sftp-server binary [defaults to on+guessed]]),
-      [
-              if test "x$withval" != "xno"; then
-dnl                   --without-sftp-server is a perfectly good
-dnl                   way of requesting that sftp compatability *not*
-dnl                   be present.
-                      scponly_explicit_sftpserver_path=$withval
-                      dnl  TODO: should test viability...
-                      AC_DEFINE([ENABLE_SFTP], [1], [Define to 1 to enable sftp support])
-                      scponly_sftp_compat=1
-              fi
-      ],[
-              AC_DEFINE([ENABLE_SFTP], [1], [Define to 1 to enable sftp support])
-              scponly_sftp_compat=1
-      ])
+    AC_HELP_STRING([--with-sftp-server], [path to sftp-server binary [defaults to on+guessed]]),
+    [
+        if test "x$withval" != "xno"; then
+            # --without-sftp-server is a perfectly good
+            # way of requesting that sftp compatability *not*
+            # be present.
+            scponly_explicit_sftpserver_path=$withval
+            AC_DEFINE([ENABLE_SFTP], [1], [Define to 1 to enable sftp support])
+            scponly_sftp_compat=1
+        fi
+    ],[
+        AC_DEFINE([ENABLE_SFTP], [1], [Define to 1 to enable sftp support])
+        scponly_sftp_compat=1
+    ])
 
 AC_ARG_ENABLE([winscp-compat],
-      AC_HELP_STRING([--enable-winscp-compat], [enable winscp (and scp) compatibility]),
-      [
-              if test "x$enableval" != "xno"; then
-                      scponly_scp_compat=1
-                      AC_DEFINE([ENABLE_SCP2], [1], [Define to 1 to enable scp compatibility])
-                      AC_DEFINE([WINSCP_COMPAT], [1], [Define to 1 to enable winscp compatibility])
-              fi
-      ],[
-              echo -n      dnl  Defaults to off, must be turned on explicitly
-      ])
+    AC_HELP_STRING([--enable-winscp-compat], [enable winscp (and scp) compatibility]),
+    [
+        if test "x$enableval" != "xno"; then
+            scponly_scp_compat=1
+            AC_DEFINE([ENABLE_SCP2], [1], [Define to 1 to enable scp compatibility])
+            AC_DEFINE([WINSCP_COMPAT], [1], [Define to 1 to enable winscp compatibility])
+        fi
+    ])
 
 AC_ARG_WITH([default-chdir],
-	AC_HELP_STRING([--with-default-chdir=DIR], [cd to this directory after authentication (only for interactive logins)]),
-		[
-			AC_DEFINE([ENABLE_DEFAULT_CHDIR], [1], [Define to 1 to cd to default chdir directory])
-			AC_DEFINE_UNQUOTED([DEFAULT_CHDIR], ["$withval"], [The default directory to chdir to]) 
-		],[
-			echo -n      dnl  Defaults to off, must be turned on explicitly
-		])
+    AC_HELP_STRING([--with-default-chdir=DIR], [cd to this directory after authentication (only for interactive logins)]),
+    [
+        AC_DEFINE([ENABLE_DEFAULT_CHDIR], [1], [Define to 1 to cd to default chdir directory])
+        AC_DEFINE_UNQUOTED([DEFAULT_CHDIR], ["$withval"], [The default directory to chdir to]) 
+    ])
 
 AC_ARG_ENABLE([unison-compat],
-      AC_HELP_STRING([--enable-unison-compat], [enable unison compatibility]),
-      [
-              if test "x$enableval" != "xno"; then
-                      AC_DEFINE([UNISON_COMPAT], [1], [Define to 1 to enable unison compatibility])
-              fi
-      ],[
-              echo -n      dnl  Defaults to off, must be turned on explicitly
-      ])
-		
+    AC_HELP_STRING([--enable-unison-compat], [enable unison compatibility]),
+    [
+        if test "x$enableval" != "xno"; then
+            AC_DEFINE([UNISON_COMPAT], [1], [Define to 1 to enable unison compatibility])
+        fi
+    ])
+
 AC_ARG_ENABLE([scp-compat],
-      AC_HELP_STRING([--enable-scp-compat], [enable scp compatibility]),
-      [
-              if test "x$enableval" != "xno"; then
-					AC_DEFINE([ENABLE_SCP2])
-					scponly_scp_compat=1
-              fi
-      ],[
-              echo -n      dnl  Defaults to off, must be turned on explicitly
-      ])
+    AC_HELP_STRING([--enable-scp-compat], [enable scp compatibility]),
+    [
+        if test "x$enableval" != "xno"; then
+            AC_DEFINE([ENABLE_SCP2])
+            scponly_scp_compat=1
+        fi
+    ])
 
 AC_ARG_ENABLE([rsync-compat],
-      AC_HELP_STRING([--enable-rsync-compat], [enable rsync compatibility]),
-      [
-              if test "x$enableval" != "xno"; then
-                      AC_DEFINE([RSYNC_COMPAT], [1], [Define to 1 to enable rsync compatibility])
-              fi
-      ],[
-              echo -n      dnl  Defaults to off, must be turned on explicitly
-      ])
+    AC_HELP_STRING([--enable-rsync-compat], [enable rsync compatibility]),
+    [
+        if test "x$enableval" != "xno"; then
+            AC_DEFINE([RSYNC_COMPAT], [1], [Define to 1 to enable rsync compatibility])
+        fi
+    ])
 
 AC_ARG_ENABLE([chrooted-binary],
-      AC_HELP_STRING([--enable-chrooted-binary], [install chrooted binary 'scponlyc']),
-      [
-              if test "x$enableval" != "xno"; then
-                      AC_DEFINE([CHROOTED_NAME], ["scponlyc"], [The name of the chrooted binary])
-              fi
-      ],[
-              echo -n
-      ])
-AC_MSG_NOTICE([enable binary: $enableval])
+    AC_HELP_STRING([--enable-chrooted-binary], [install chrooted binary 'scponlyc']),
+    [
+        if test "x$enableval" != "xno"; then
+        AC_DEFINE([CHROOTED_NAME], ["scponlyc"], [The name of the chrooted binary])
+        fi
+    ])
+
 AC_SUBST([CHROOTED_NAME], [scponlyc])
 AM_CONDITIONAL([ENABLE_CHROOTED_BINARY], [test "x$enableval" != "xno"])
 
 AC_ARG_ENABLE([chroot-checkdir],
-      AC_HELP_STRING([--disable-chroot-checkdir], [disable checking chroot dir ownership]),
-      [
-              if test "x$enableval" != "xno"; then
-                      AC_DEFINE([CHROOT_CHECKDIR], [1], [Define to 1 to enable checking of chroot dir ownership])
-              fi
-      ],[
-dnl           Default clause. This one defaults to on.
-              AC_DEFINE([CHROOT_CHECKDIR])
-      ])
+    AC_HELP_STRING([--disable-chroot-checkdir], [disable checking chroot dir ownership]),
+    [
+        if test "x$enableval" != "xno"; then
+            AC_DEFINE([CHROOT_CHECKDIR], [1], [Define to 1 to enable checking of chroot dir ownership])
+        fi
+    ])
 
 AC_ARG_ENABLE([svn-compat],
-      AC_HELP_STRING([--enable-svn-compat], [enable subversion SCS cli compatibility]),
-      [
-              if test "x$enableval" != "xno"; then
-                      AC_DEFINE([SVN_COMPAT], [1], [Define to 1 to enable subversion SCS cli compatibility])
-              fi
-      ],[
-              echo -n      dnl  Defaults to off, must be turned on explicitly
-      ])
+    AC_HELP_STRING([--enable-svn-compat], [enable subversion SCS cli compatibility]),
+    [
+        if test "x$enableval" != "xno"; then
+            AC_DEFINE([SVN_COMPAT], [1], [Define to 1 to enable subversion SCS cli compatibility])
+        fi
+    ])
 
 AC_ARG_ENABLE([svnserv-compat],
-      AC_HELP_STRING([--enable-svnserv-compat], [enable subversion SCS svnserve compatibility]),
-      [
-              if test "x$enableval" != "xno"; then
-                      AC_DEFINE([SVNSERV_COMPAT], [1], [Define to 1 to enable subversion SCS svnserve compatibility])
-              fi
-      ],[
-              echo -n      dnl  Defaults to off, must be turned on explicitly
-      ])
+    AC_HELP_STRING([--enable-svnserv-compat], [enable subversion SCS svnserve compatibility]),
+    [
+        if test "x$enableval" != "xno"; then
+            AC_DEFINE([SVNSERV_COMPAT], [1], [Define to 1 to enable subversion SCS svnserve compatibility])
+        fi
+    ])
 
 AC_ARG_ENABLE([passwd-compat],
-      AC_HELP_STRING([--enable-passwd-compat], [enable passwd compatibility]),
-      [
-              if test "x$enableval" != "xno"; then
-                      AC_DEFINE([PASSWD_COMPAT], [1], [Define to 1 to enable passwd compatibility])
-              fi
-      ],[
-              echo -n      dnl  Defaults to off, must be turned on explicitly
-      ])
+    AC_HELP_STRING([--enable-passwd-compat], [enable passwd compatibility]),
+    [
+        if test "x$enableval" != "xno"; then
+            AC_DEFINE([PASSWD_COMPAT], [1], [Define to 1 to enable passwd compatibility])
+        fi
+    ])
 
 AC_ARG_ENABLE([quota-compat],
-      AC_HELP_STRING([--enable-quota-compat], [enable quota compatibility]),
-      [
-              if test "x$enableval" != "xno"; then
-                      AC_DEFINE([QUOTA_COMPAT], [1], [Define to 1 to enable quota compatibility])
-              fi
-      ],[
-              echo -n      dnl  Defaults to off, must be turned on explicitly
-      ])
+    AC_HELP_STRING([--enable-quota-compat], [enable quota compatibility]),
+    [
+        if test "x$enableval" != "xno"; then
+            AC_DEFINE([QUOTA_COMPAT], [1], [Define to 1 to enable quota compatibility])
+        fi
+    ])
 
 if test "x$scponly_scp_compat" != "x"; then
-	AC_MSG_NOTICE([enabling core WinSCP and Vanilla SCP binaries...])
-	SCPONLY_PATH_PROG_DEFINE([PROG_SFTP_SERVER], [sftp-server],[/usr/lib:/usr/lib64:/usr/libexec:/usr/libexec/openssh:/usr/lib/ssh:/usr/lib64/ssh:/usr/local/libexec:/usr/lib/misc:/usr/lib/openssh])
-	SCPONLY_PATH_PROG_DEFINE([PROG_LS],    [ls],    [/bin:/usr/bin:/sbin:/usr/sbin])
-	SCPONLY_PATH_PROG_DEFINE([PROG_SCP],   [scp],   [/bin:/usr/bin:/sbin:/usr/sbin])
-	SCPONLY_PATH_PROG_DEFINE([PROG_RM],    [rm],    [/bin:/usr/bin:/sbin:/usr/sbin])
-	SCPONLY_PATH_PROG_DEFINE([PROG_LN],    [ln],    [/bin:/usr/bin:/sbin:/usr/sbin])
-	SCPONLY_PATH_PROG_DEFINE([PROG_MV],    [mv],    [/bin:/usr/bin:/sbin:/usr/sbin])
-	SCPONLY_PATH_PROG_DEFINE([PROG_CHMOD], [chmod], [/bin:/usr/bin:/sbin:/usr/sbin])
-	SCPONLY_PATH_PROG_DEFINE([PROG_CHOWN], [chown], [/bin:/usr/bin:/sbin:/usr/sbin])
-	SCPONLY_PATH_PROG_DEFINE([PROG_CHGRP], [chgrp], [/bin:/usr/bin:/sbin:/usr/sbin])
-	SCPONLY_PATH_PROG_DEFINE([PROG_MKDIR], [mkdir], [/bin:/usr/bin:/sbin:/usr/sbin])
-	SCPONLY_PATH_PROG_DEFINE([PROG_RMDIR], [rmdir], [/bin:/usr/bin:/sbin:/usr/sbin])
+    AC_MSG_NOTICE([enabling core WinSCP and Vanilla SCP binaries...])
+    SCPONLY_PATH_PROG_DEFINE([PROG_SFTP_SERVER], [sftp-server],[/usr/lib:/usr/lib64:/usr/libexec:/usr/libexec/openssh:/usr/lib/ssh:/usr/lib64/ssh:/usr/local/libexec:/usr/lib/misc:/usr/lib/openssh])
+    SCPONLY_PATH_PROG_DEFINE([PROG_LS],    [ls],    [/bin:/usr/bin:/sbin:/usr/sbin])
+    SCPONLY_PATH_PROG_DEFINE([PROG_SCP],   [scp],   [/bin:/usr/bin:/sbin:/usr/sbin])
+    SCPONLY_PATH_PROG_DEFINE([PROG_RM],    [rm],    [/bin:/usr/bin:/sbin:/usr/sbin])
+    SCPONLY_PATH_PROG_DEFINE([PROG_LN],    [ln],    [/bin:/usr/bin:/sbin:/usr/sbin])
+    SCPONLY_PATH_PROG_DEFINE([PROG_MV],    [mv],    [/bin:/usr/bin:/sbin:/usr/sbin])
+    SCPONLY_PATH_PROG_DEFINE([PROG_CHMOD], [chmod], [/bin:/usr/bin:/sbin:/usr/sbin])
+    SCPONLY_PATH_PROG_DEFINE([PROG_CHOWN], [chown], [/bin:/usr/bin:/sbin:/usr/sbin])
+    SCPONLY_PATH_PROG_DEFINE([PROG_CHGRP], [chgrp], [/bin:/usr/bin:/sbin:/usr/sbin])
+    SCPONLY_PATH_PROG_DEFINE([PROG_MKDIR], [mkdir], [/bin:/usr/bin:/sbin:/usr/sbin])
+    SCPONLY_PATH_PROG_DEFINE([PROG_RMDIR], [rmdir], [/bin:/usr/bin:/sbin:/usr/sbin])
 fi
 
 dnl Check for binaries required by the WinSCP compatibility mode
 dnl winscp-compat conditionals:
 if test "x$enable_winscp_compat" != "xno"; then
     AC_MSG_NOTICE([enabling WinSCP compatability...])
-	SCPONLY_PATH_PROG_DEFINE([PROG_PWD],    [pwd],    [/bin:/usr/bin:/sbin:/usr/sbin])
-	SCPONLY_PATH_PROG_DEFINE([PROG_GROUPS], [groups], [/bin:/usr/bin:/sbin:/usr/sbin])
-	SCPONLY_PATH_PROG_DEFINE([PROG_ID], 	[id],     [/bin:/usr/bin:/sbin:/usr/sbin])
-	SCPONLY_PATH_PROG_DEFINE([PROG_ECHO],   [echo],   [/bin:/usr/bin:/sbin:/usr/sbin])
+    SCPONLY_PATH_PROG_DEFINE([PROG_PWD],    [pwd],    [/bin:/usr/bin:/sbin:/usr/sbin])
+    SCPONLY_PATH_PROG_DEFINE([PROG_GROUPS], [groups], [/bin:/usr/bin:/sbin:/usr/sbin])
+    SCPONLY_PATH_PROG_DEFINE([PROG_ID],     [id],     [/bin:/usr/bin:/sbin:/usr/sbin])
+    SCPONLY_PATH_PROG_DEFINE([PROG_ECHO],   [echo],   [/bin:/usr/bin:/sbin:/usr/sbin])
 fi
 
 # unison-compat conditionals:
 if test "x$enable_unison_compat" != "x" && test "x$enable_unison_compat" != "xno"; then
-	AC_MSG_WARN([read the SECURITY document before enabling unison compatibility])
-	AC_MSG_NOTICE([enabling unison compatability...])
-	SCPONLY_PATH_PROG_DEFINE([PROG_UNISON],   [unison], [/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin])
-fi	
+    AC_MSG_WARN([read the SECURITY document before enabling unison compatibility])
+    AC_MSG_NOTICE([enabling unison compatability...])
+    SCPONLY_PATH_PROG_DEFINE([PROG_UNISON],   [unison], [/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin])
+fi
 
 # rsync-compat conditionals:
 if test "x$enable_rsync_compat" != "x" && test "x$enable_rsync_compat" != "xno"; then
-	AC_MSG_WARN([read the SECURITY document before enabling rsync compatibility])
-	AC_MSG_NOTICE([enabling rsync compatability...])
-	SCPONLY_PATH_PROG_DEFINE([PROG_RSYNC],   [rsync], [/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin])
-fi	
+    AC_MSG_WARN([read the SECURITY document before enabling rsync compatibility])
+    AC_MSG_NOTICE([enabling rsync compatability...])
+    SCPONLY_PATH_PROG_DEFINE([PROG_RSYNC],   [rsync], [/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin])
+fi
 
 dnl Find the svnserve and svn binaries
 if test "x$enable_svnserv_compat" != "x" && test "x$enable_svnserv_compat" != "xno"; then
-	AC_MSG_WARN([read the SECURITY document before enabling svnserv compatibility])
-	AC_MSG_NOTICE([enabling svnserv compatibility...])
-	SCPONLY_PATH_PROG_DEFINE([PROG_SVNSERV], [svnserve], [/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin])
+    AC_MSG_WARN([read the SECURITY document before enabling svnserv compatibility])
+    AC_MSG_NOTICE([enabling svnserv compatibility...])
+    SCPONLY_PATH_PROG_DEFINE([PROG_SVNSERV], [svnserve], [/bin:/usr/bin:/sbin:/usr/sbin:/usr/local/bin])
 fi
 
 if test "x$enable_svn_compat" != "x" && test "x$enable_svn_compat" != "xno"; then
-	AC_MSG_WARN([read the SECURITY document before enabling svn compatibility])
-	AC_MSG_NOTICE([enabling subversion compatability...])
-	SCPONLY_PATH_PROG_DEFINE([PROG_SVN],   [svn],   [/bin:/usr/bin:/usr/local/bin:/usr/local/bin])
+    AC_MSG_WARN([read the SECURITY document before enabling svn compatibility])
+    AC_MSG_NOTICE([enabling subversion compatability...])
+    SCPONLY_PATH_PROG_DEFINE([PROG_SVN],   [svn],   [/bin:/usr/bin:/usr/local/bin:/usr/local/bin])
 fi
 
 if test "x$enable_passwd_compat" != "x" && test "x$enable_passwd_compat" != "xno"; then
-	AC_MSG_NOTICE([enabling passwd compatability...])
-	SCPONLY_PATH_PROG_DEFINE([PROG_PASSWD],   [passwd],   [/bin:/usr/bin:/sbin:/usr/sbin])
+    AC_MSG_NOTICE([enabling passwd compatability...])
+    SCPONLY_PATH_PROG_DEFINE([PROG_PASSWD],   [passwd],   [/bin:/usr/bin:/sbin:/usr/sbin])
 fi
 
 if test "x$enable_quota_compat" != "x" && test "x$enable_quota_compat" != "xno"; then
-	AC_MSG_NOTICE([enabling quota compatability...])
-	SCPONLY_PATH_PROG_DEFINE([PROG_QUOTA],   [quota],   [/bin:/usr/bin:/sbin:/usr/sbin])
+    AC_MSG_NOTICE([enabling quota compatability...])
+    SCPONLY_PATH_PROG_DEFINE([PROG_QUOTA],   [quota],   [/bin:/usr/bin:/sbin:/usr/sbin])
 fi
 
 dnl with-sftp-server conditionals:
 if test "x$scponly_sftp_compat" != "x"; then
-  AC_MSG_NOTICE([enabling SFTP compatability...])
-  if test "x$scponly_explicit_sftpserver_path" = "x"; then
-      dnl Informed guess:
-      SCPONLY_PATH_PROG_DEFINE([PROG_SFTP_SERVER], [sftp-server],
-       [/usr/lib:/usr/lib/ssh:/usr/libexec/openssh:/usr/libexec:/usr/local/libexec])
-      dnl Debian uses /usr/lib
-      dnl Red Hat uses /usr/libexec/openssh
-      dnl Many a *BSD uses $PATH itself (which is implicit + checked 1st)
-      dnl Lupe says FreeBSD wants /usr/[local]/libexec
-      dnl I've seen it in /usr/lib/ssh under Mandrake 8.1
-  else
-      dnl Do what SCPONLY_PATH_PROG_DEFINE does:
-      echo checking for sftp-server... $scponly_explicit_sftpserver_path
-      AC_DEFINE_UNQUOTED([PROG_SFTP_SERVER], ["$scponly_explicit_sftpserver_path"])
-      scponly_PROG_SFTP_SERVER=$scponly_explicit_sftpserver_path
-  fi
+    AC_MSG_NOTICE([enabling SFTP compatability...])
+    if test "x$scponly_explicit_sftpserver_path" = "x"; then
+        # Informed guess:
+        SCPONLY_PATH_PROG_DEFINE([PROG_SFTP_SERVER], [sftp-server],
+           [/usr/lib:/usr/lib/ssh:/usr/libexec/openssh:/usr/libexec:/usr/local/libexec])
+        # Debian uses /usr/lib
+        # Red Hat uses /usr/libexec/openssh
+        # Many a *BSD uses $PATH itself (which is implicit + checked 1st)
+        # Lupe says FreeBSD wants /usr/[local]/libexec
+        # I've seen it in /usr/lib/ssh under Mandrake 8.1
+    else
+        # Do what SCPONLY_PATH_PROG_DEFINE does:
+        echo checking for sftp-server... $scponly_explicit_sftpserver_path
+        AC_DEFINE_UNQUOTED([PROG_SFTP_SERVER], ["$scponly_explicit_sftpserver_path"])
+        scponly_PROG_SFTP_SERVER=$scponly_explicit_sftpserver_path
+    fi
 fi
 
 dnl Checks for libraries.
