Don't warn for structure padding

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 ACLOCAL_AMFLAGS = -I m4
-AM_CFLAGS = -Wall -Weverything
+AM_CFLAGS = -Wall -Weverything -Wno-padded
 
 confdir = $(sysconfdir)/scponly
 
